# ai-guardrails

./: .coveragerc  OPERATIONAL_SAFETY.md  PROJECT_PLAN.md  TEST_STATUS.md  app.py  blueprint.json  convo.txt  debug_modifiers.py  debug_parsing.py  pyproject.toml  requirements.txt  run_tests.py
codebase-evolver/: .coverage  AI_SAFETY_PROTOCOLS.md  DESIGN_PLAN.md  codebase-evolve.conv  pyproject.toml  run_brick1_verification.py  run_brick2_verification.py
codebase-evolver/sample_repos/small_repo/: test.py
codebase-evolver/semantic_agent/: __init__.py
codebase-evolver/semantic_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
codebase-evolver/semantic_agent/oracle/: __init__.py  pyright_daemon.py
codebase-evolver/verification_ui/: brick1_start_daemon.html  brick2_stop_daemon.html
ironclad/: .coverage  BENCHMARK_MIGRATION_PLAN.md  COVERAGE_IMPROVEMENT_PLAN.md  MANIFEST.in  blueprint.json  ironclad-benchmark.conv  ironclad-cli.py  ironclad.py  ironclad_phase2.py  ironclad_phase3.py  module-forge-wrapper.py  pyproject.toml  setup.py  test-output.txt  test-report.txt  test_installation.py  test_ironclad.py
ironclad/benchmarks/: README.md  __init__.py  run.py
ironclad/coverage_annotated/: z_bf35d6d978b8dd93_code_utils.py,cover
ironclad/debug/: debug_generate.py  debug_generate_fail.py  debug_trigger_repair.py
ironclad/examples/: simple_usage_example.py  ui_integration_example.py
ironclad/src/: __init__.py  cli.py  code_utils.py  factory_manager.py  ironclad.py  module_designer.py  module_forge.py
ironclad/temp_test/: test_add_numbers.py
ironclad/tests/: test_cli.py  test_code_utils.py  test_debug_logging.py  test_escape.py  test_factory_manager.py  test_init.py  test_ironclad.py  test_main_block.py  test_main_blocks.py  test_module_designer.py  test_module_forge.py  test_repair.py  test_repair_debug_logging.py  test_ui_cli.py  test_ui_generator.py  test_ui_spec.py  test_ui_validator.py
ironclad/verified_bricks/: add_numbers.py  add_two_numbers.py  average_numbers.py  calculate_average.py  clamp.py  compile_email_patterns.py  convert_list_to_dict_by_id.py  extract_phones.py  factorial.py  fetch_json.py  fetch_status.py  fetch_url.py  fetch_url_status.py  fib.py  fibonacci.py  filter_even_numbers.py  find_max_subarray.py  flatten_dict.py  function_name.py  gcd.py  get_prime_factors.py  group_words_by_length.py  is_healthy.py  is_healthy_endpoint.py  is_palindrome.py  make_request.py  max_product_pair.py  max_subarray_sum.py  median.py  merge_sorted_lists.py  multiply_list.py  nth_fibonacci.py  palindrome.py  palindrome_checker.py  parse_http_request_line.py  parse_log_line.py  process_numbers.py  process_request.py  reverse_string.py  reverse_words.py  (+64 more)
remote-model-module-forge/: .env.example  None_spec.json  QUICKSTART.md  README.md  README.md.bak  example_spec.json  pyproject.toml
remote-model-module-forge/brick_commissioner/: cli.py  cli.py.bak2  config.py  llm_client.py  orchestrator.py  prompts.py  protocol.py  runners.py  schemas.py  state.py  ui.py
remote-model-module-forge/brick_commissioner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
remote-model-module-forge/logs/: call_1_1767209616.json  call_1_1767209622.json  call_1_1767209627.json  call_1_1767209691.json  call_1_1767209697.json  call_1_1767209704.json  call_1_1767212974.json  call_1_1767214151.json  call_2_1767209619.json  call_2_1767209625.json  call_2_1767209630.json  call_2_1767209694.json  call_2_1767209700.json  call_2_1767209707.json
remote-model-module-forge/runs/: simple_math_20251231_133336.json  simple_math_20251231_133336_halted_report.txt  simple_math_20251231_133451.json  simple_math_20251231_133451_halted_report.txt  string_calculator_20251231_131001.json  string_calculator_20251231_131001_halted_report.txt  string_calculator_20251231_131100.json  string_calculator_20251231_131100_halted_report.txt  string_calculator_20251231_131431.json  string_calculator_20251231_131554.json  string_calculator_20251231_131621.json  string_calculator_20251231_131621_halted_report.txt  string_calculator_20251231_131657.json  string_calculator_20251231_131657_halted_report.txt  string_calculator_20251231_131903.json  string_calculator_20251231_131903_halted_report.txt  string_calculator_20251231_132155.json  string_calculator_20251231_132255.json  string_calculator_20251231_132255_halted_report.txt  string_calculator_20251231_132313.json  string_calculator_20251231_132407.json  string_calculator_20251231_132407_halted_report.txt  string_calculator_20251231_132445.json  string_calculator_20251231_132445_halted_report.txt  string_calculator_20251231_132515.json  string_calculator_20251231_132515_report.txt  string_calculator_20251231_132534.json  string_calculator_20251231_132534_report.txt  string_calculator_20251231_133347.json  string_calculator_20251231_133347_halted_report.txt  string_calculator_20251231_133503.json  string_calculator_20251231_133503_halted_report.txt  string_utils_20251231_133342.json  string_utils_20251231_133342_halted_report.txt  string_utils_20251231_133457.json  string_utils_20251231_133457_halted_report.txt
session_restore/: .coverage  PROGRESS_LOG.md  README.md  SUMMARY_test.md  TEST_FIX_PLAN.md  TURN_BY_TURN_PLAN.md  coverage_all.json  coverage_extract_bullet.json  coverage_final.json  coverage_final2.json  coverage_parse_turn_summary.json  coverage_process.json  coverage_turn_summarizer.json  ocap_summarize.py  pyproject.toml  setup.py  test_add.py  test_append.py
session_restore/docs/: build_turn_prompt_spec.md  extract_bullet_list_spec.md  parse_turn_summary_spec.md  process_turns_incrementally_spec.md  test_coverage_build_turn_prompt.md  test_coverage_extract_bullet_list.md  test_coverage_parse_turn_summary.md  test_coverage_process_turns_incrementally.md  turn_summarizer_spec.md
session_restore/tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_evidence_gatherer.py  test_integration.py  test_integration_e2e.py  test_parser.py  test_turn_summarizer.py
(+322 files in other folders)
