[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ai-guardrails"
version = "0.2.0"
description = "AI Guardrails - truthfulness evaluation and operational safety"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
core = [
    "spacy>=3.8.0",
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.scripts]
ai-watchdog = "ai_guardrails.operational_safety.ai_watchdog:main"

[tool.setuptools.packages.find]
include = ["ai_guardrails*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
